syntax = "proto3";

package proto;

option go_package = "github.com/calmato/gran-book/proto";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import "proto/common.proto";

service AuthService {
  rpc GetAuth(Empty) returns (AuthResponse);
  rpc CreateAuth(CreateAuthRequest) returns (AuthResponse);
  rpc UpdateAuthEmail(UpdateAuthEmailRequest) returns (AuthResponse);
  rpc UpdateAuthPassword(UpdateAuthPasswordRequest) returns (AuthResponse);
  rpc UpdateAuthProfile(UpdateAuthProfileRequest) returns (AuthResponse);
  rpc UpdateAuthAddress(UpdateAuthAddressRequest) returns (AuthResponse);
  rpc UploadAuthThumbnail(stream UploadAuthThumbnailRequest) returns (AuthThumbnailResponse);
  rpc DeleteAuth(Empty) returns (Empty);
  rpc RegisterAuthDevice(RegisterAuthDeviceRequest) returns (AuthResponse);
}

message CreateAuthRequest {
  string username = 1 [
    (validate.rules).string = {
      min_len: 1
      max_len: 32
    }
  ];
  string email = 2 [
    (validate.rules).string = {
      min_len: 1
      max_len: 256
      email: true
    }
  ];
  string password = 3 [
    (validate.rules).string = {
      min_len: 6
      max_len: 32
      pattern: "^[a-zA-Z0-9_!@#$_%^&*.?()-=+]*$"
    }
  ];
  string password_confirmation = 4 [
    (validate.rules).string = {
      min_len: 1
    }
  ];
}

message UpdateAuthEmailRequest {
  string email = 1 [
    (validate.rules).string = {
      min_len: 1
      max_len: 256
      email: true
    }
  ];
}

message UpdateAuthPasswordRequest {
  string password = 1 [
    (validate.rules).string = {
      min_len: 6
      max_len: 32
      pattern: "^[a-zA-Z0-9_!@#$_%^&*.?()-=+]*$"
    }
  ];
  string password_confirmation = 2 [
    (validate.rules).string = {
      min_len: 6
    }
  ];
}

message UpdateAuthProfileRequest {
  string username = 1 [
    (validate.rules).string = {
      min_len: 1
      max_len: 32
    }
  ];
  Gender gender = 2 [
    (validate.rules).enum = {
      defined_only: true
    }
  ];
  string thumbnail_url = 3;
  string self_introduction = 4 [
    (validate.rules).string = {
      max_len: 256
    }
  ];
}

message UpdateAuthAddressRequest {
  string last_name = 1 [
    (validate.rules).string = {
      min_len: 1
      max_len: 16
    }
  ];
  string first_name = 2 [
    (validate.rules).string = {
      min_len: 1
      max_len: 16
    }
  ];
  string last_name_kana = 3 [
    (validate.rules).string = {
      min_len: 1
      max_len: 32
      pattern: "^[ぁ-ゔー]*$"
    }
  ];
  string first_name_kana = 4 [
    (validate.rules).string = {
      min_len: 1
      max_len: 32
      pattern: "^[ぁ-ゔー]*$"
    }
  ];
  string phone_number = 5 [
    (validate.rules).string = {
      min_len: 1
      max_len: 16
    }
  ];
  string postal_code = 6 [
    (validate.rules).string = {
      min_len: 1
      max_len: 16
    }
  ];
  string prefecture = 7 [
    (validate.rules).string = {
      min_len: 1
      max_len: 32
    }
  ];
  string city = 8 [
    (validate.rules).string = {
      min_len: 1
      max_len: 32
    }
  ];
  string address_line1 = 9 [
    (validate.rules).string = {
      min_len: 1
      max_len: 64
    }
  ];
  string address_line2 = 10 [
    (validate.rules).string = {
      max_len: 64
    }
  ];
}

message UploadAuthThumbnailRequest {
  bytes thumbnail = 1;
  int64 position = 2 [
    (validate.rules).int64 = {
      gte: 0
    }
  ];
}

message RegisterAuthDeviceRequest {
  string instance_id = 1 [
    (validate.rules).string = {
      min_len: 1
    }
  ];
}

message AuthResponse {
  string id = 1; // ユーザーID
  string username = 2; // ユーザー名
  Gender gender = 3; // 性別
  string email = 4; // メールアドレス
  string phone_number = 5; // 電話番号
  Role role = 6; // ユーザー権限
  string thumbnail_url = 7; // サムネイルURL
  string self_introduction = 8; // 自己紹介
  string last_name = 9; // 姓
  string first_name = 10; // 名
  string last_name_kana = 11; // 姓(かな)
  string first_name_kana = 12; // 名(かな)
  string postal_code = 13; // 郵便番号
  string prefecture = 14; // 都道府県
  string city = 15; // 市区町村
  string address_line1 = 16; // 町名,番地
  string address_line2 = 17; // マンション・ビル名,号室
  string created_at = 18; // 作成日時
  string updated_at = 19; // 更新日時
}

message AuthThumbnailResponse {
  string thumbnail_url = 1; // サムネイルURL
}
